fix bug #41947 (SimpleXML incorrectly registers empty strings as namespaces add test